fixed dark mode and light mode

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -38,3 +38,31 @@ body.dark .card {
   background-color: #fff;
   color: #333;
 }
+
+.modal-body {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.left-half,
+.right-half {
+  flex: 1;
+  max-width: 50%;
+}
+
+.coin-image {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
+
+.modal-body p {
+  font-size: 0.875rem;
+  color: #888;
+}
+
+.modal-body p span {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
